second add work

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <img src="./images/Background.png" class="header-img">
             </div>
 </header>
-<section class="section1">
+<section class="section-stats">
     <div class="section-icons">
         <div class="container">
                <h2>The most popular sales platform in country</h2>
             <div class="boxes">
             <div class="box">
-                <div class="box-icon">
+                <div class="box-icon circle-red">
                     <img src="./images/Person.svg"  height="52px">
                 </div>
                 <div class="box-number">
@@ -76,33 +76,236 @@
              </div>
             </div>
             <div class="box">
-                <div class="box-icon">
-                    <img src="./images/Eye.svg"  height="52px">
+
+                <div class="box-icon circle-blue">
+                    <img src="./images/Eye.svg"  height="42px">
                 </div>
                 <div class="box-number">
-                    100000+
+                    2000000+
                 </div>
                 <div class="box-text">
-                    daily entries
+                    seen products
+                    every day
                 </div>
             </div>
             <div class="box">
-                <div class="box-icon">
+                <div class="box-icon circle-green">
+
                     <img src="./images/Catalog.svg"  height="52px">
+
                 </div>
                 <div class="box-number">
-                    100000+
+                    10000+
                 </div>
                 <div class="box-text">
-                    daily entries
+                    added posts
+                    daily
                 </div>
+
             </div>
         </div>
         </div>
     </div>
+</div>
+</section>
+<section class="section-benefits">
+    <div class="section-benefits-all">
+        <div class="container2">
 
+            <div class="box-benefit">
+                <div class="box-benefit-all">
+                    <div class="box-benetit-text">
+                            <h2>Be always first</h2>
+                    <div class="box-benefit-content">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    </div>
+                        <div class="box-benefit-hr circle-red">
+                        </div>
+                    </div>
+                    <div class="box-benefit-image">
+
+                             <img src="./images/Macbook.png"  >
+                            <div class="box-benefit-bg ">
+
+                            </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="box-benefit">
+                <div class="box-benefit-all2">
+                    <div class="box-benefit-text2">
+                        <h2>Your shop is where you are!</h2>
+                        <div class="box-benefit-content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                        </div>
+                        <div class="box-benefit-hr circle-blue">
+                        </div>
+                    </div>
+                    <div class="box-benefit-image2">
+
+                        <img src="./images/iPhone.png" height="328px" >
+
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="box-benefit">
+                <div class="box-benefit-all3">
+                    <div class="box-benefit-text3">
+                        <h2>Increase recognition your brand!</h2>
+                        <div class="box-benefit-content3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                        </div>
+                        <div class="box-benefit-hr circle-green">
+                                </div>
+
+                    </div>
+                    <div class="box-benefit-image3">
+
+                        <img src="./images/Trumpet.png" height="328px" >
+
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </section>
 
+<section class="section-pricing">
+    <div class="section-pricing-all">
+        <div class="container">
+            <div class="Title-pricing">
+            <h2>Pricing</h2>
+            </div>
+            <div class="pricing-all-boxes">
+
+
+                <div class="pricing-box circle-red backgroundnone" >
+                    <h4>Basic</h4>
+                     <div class="price circle-red backgroundnone">
+                       <h5>$0</h5>
+                    </div>
+                <div class="price">
+                    <p>     100 MB HDD</p>
+                    <p>     1 Subdomain</p>
+                    <p>     2 E-mails</p>
+                    <li>     Two years license</li>
+                    <li>     Full support</li>
+                </div>
+<button class="buttons-price circle-red">Begin</button>
+
+                </div>
+
+
+
+                <div class="pricing-box2 circle-blue backgroundnone" >
+                    <h4>Basic</h4>
+                    <div class="price circle-blue backgroundnone">
+                        <h5>$25</h5>
+                    </div>
+                    <div class="price">
+                        <p>     500 MB HDD</p>
+                        <p>     12Subdomain</p>
+                        <p>     5 E-mails</p>
+                        <p>     One years license</p>
+                        <li>     Full support</li>
+                    </div>
+                    <button class="buttons-price2 circle-blue">Begin</button>
+
+                </div>
+
+                <div class="pricing-box circle-green backgroundnone" >
+                    <h4>Basic</h4>
+                    <div class="price circle-green backgroundnone">
+                        <h5>$60</h5>
+                    </div>
+                    <div class="price">
+                        <p>     2 GB HDD</p>
+                        <p>     5 Subdomain</p>
+                        <p>     20 E-mails</p>
+                        <p>     Two years license</p>
+                        <p>     Full support</p>
+                    </div>
+                    <button class="buttons-price circle-green">Begin</button>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="section-contact">
+    <div class="section-contact-all">
+        <div class="container">
+            <div class="contact-all-content">
+
+            </div>
+            <div class="contact-left">
+               <h2>Any questions?</h2>
+               <div>Leave your email address or call us!</div>
+                <div><img src="./images/Mail Icon.svg"> info@bestshop.xyz</div>
+                <div><img src="./images/Phone Icon.svg">123 456 789</div>
+            </div>
+            <div class="contact-right">
+                <div class="inputs-content">
+                <label for="name">
+
+                    <input name="name" type="text" placeholder="Type your name" />
+                </label>
+
+                <label for="email">
+
+                    <input type="email" name="email" placeholder="Type your name" />
+                </label>
+                 </div>
+                <div class="agree-content">
+                <label class="check-form-box" for="zgoda">
+                    I hereby give consent for my personal data included in my application to be processed for the purposes of the r
+                    ecruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection
+                    of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement
+                    of such data, and repealing Directive 95/46/EC (Data Protection Directive)
+                    <input type="checkbox" name="zgoda">
+                    <span class="checkmark"></span>
+
+                </label>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer-all">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-content-right">
+                <div class="logo">
+                <a href="#" >
+                    BestShop
+                </a>
+                </div>
+                <div class="copyright">
+                    © 2019 BestShop LTD, All Rights Reserved
+
+                </div>
+            </div>
+
+            <div class="footer-content-left">
+            <a href="#"><img src="./images/Facebook.svg" </a> <a href="#"><img src="./images/Twitter.svg" </a>
+            </div>
+        </div>
+    </div>
+
+
+</footer>
 
 </body>
 </html>
