--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </section>
 <section class="section-benefits">
     <div class="section-benefits-all">
-        <div class="container2">
+        <div class="container">
 
             <div class="box-benefit">
                 <div class="box-benefit-all">
@@ -245,40 +245,53 @@
 </section>
 <section class="section-contact">
     <div class="section-contact-all">
-        <div class="container">
+        <div class="container2">
+
             <div class="contact-all-content">
 
             </div>
             <div class="contact-left">
-               <h2>Any questions?</h2>
-               <div>Leave your email address or call us!</div>
-                <div><img src="./images/Mail Icon.svg"> info@bestshop.xyz</div>
-                <div><img src="./images/Phone Icon.svg">123 456 789</div>
+               <h1>Any questions?</h1>
+               <div class="contact-content-space">Leave your email address or call us!</div>
+                <div class="contact-content">
+                <div ><img src="./images/Mail Icon.svg"> info@bestshop.xyz</div>
+                <div ><img src="./images/Phone Icon.svg">123 456 789</div>
+                </div>
             </div>
             <div class="contact-right">
                 <div class="inputs-content">
+                    <h6>NAME</h6>
                 <label for="name">
 
-                    <input name="name" type="text" placeholder="Type your name" />
+                    <input name="name" type="text" placeholder=" " />
                 </label>
-
+                    <h6>EMAIL</h6>
                 <label for="email">
 
-                    <input type="email" name="email" placeholder="Type your name" />
+                    <input type="email" name="email" placeholder=" " />
                 </label>
                  </div>
-                <div class="agree-content">
-                <label class="check-form-box" for="zgoda">
-                    I hereby give consent for my personal data included in my application to be processed for the purposes of the r
-                    ecruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection
-                    of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement
-                    of such data, and repealing Directive 95/46/EC (Data Protection Directive)
-                    <input type="checkbox" name="zgoda">
-                    <span class="checkmark"></span>
+                <div class="form__consent">
+                    <label class="form__checkbox">
+                        <input type="checkbox"/>
+                        <span class="checkbox"></span>
+                        <p class="consent__text">
+                            I hereby give consent for my personal data included in my
+                            application to be processed for the purposes of the recruitment
+                            process under the European Parliament’s and Council of the
+                            European Union Regulation on the Protection of Natural Persons as
+                            of 27 April 2016, with regard to the processing of personal data
+                            and on the free movement of such data, and repealing Directive
+                            95/46/EC (Data Protection Directive)
+                        </p>
+                    </label>
+                </div>
 
-                </label>
+
+                    <button class="button-contact circle-blue">Sent</button>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
