convert from CSS to SCSS - only Desktop

--- a/index.html
+++ b/index.html
@@ -10,55 +10,58 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
 
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./style.css" />
+<!--    <link rel="stylesheet" href="./reset.css" />-->
+<!--    <link rel="stylesheet" href="./style.css" />-->
+
+    <link rel="stylesheet" href="scss/main.scss">
+
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
 </head>
 <body>
 
-
 <header class="section-header">
- <div class="menu-shadow">
-            <div class="container" >
-                <div class="header-menu">
+    <div class="menu-shadow">
+        <div class="container" >
+            <div class="header-menu">
 
-                    <div class="logo">
-                        <a href="#" >
-                           BestShop
-                        </a>
-                    </div>
-
-                    <nav class="menu-nav">
-                        <ul class="menu-nav-list">
-                            <a href="#">WHY US</a>
-                            <a href="#">BENEFITS</a>
-                            <a href="#">PRICES</a>
-                            <a href="#">CONTACT</a>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-
-</div>
-                <div class="header-open-shop">
-                    <div class="container" >
-                       <div class="header-text">
-                        <h1>Sell More!</h1>
-                        Open shop on our platform and increase your sales
-                       </div>
-                        <div class="buttton1">
-                            <a href=#"><button> SHARE A CAR</button></a>
-
-                        </div>
-
-                    </div>
+                <div class="logo">
+                    <a href="#" >
+                        BestShop
+                    </a>
                 </div>
 
-
-                <img src="./images/Background.png" class="header-img">
+                <nav class="menu-nav">
+                    <ul class="menu-nav-list">
+                        <a href="#">WHY US</a>
+                        <a href="#">BENEFITS</a>
+                        <a href="#">PRICES</a>
+                        <a href="#">CONTACT</a>
+                    </ul>
+                </nav>
             </div>
+        </div>
+
+    </div>
+    <div class="header-open-shop">
+        <div class="container" >
+            <div class="header-text">
+                <h1>Sell More!</h1>
+                Open shop on our platform and increase your sales
+            </div>
+            <div class="buttton1">
+                <a href=#"><button> SHARE A CAR</button></a>
+
+            </div>
+
+        </div>
+    </div>
+
+
+    <img src="./images/Background.png" class="header-img">
+    </div>
 </header>
+
 <section class="section-stats">
     <div class="section-icons">
         <div class="container">
@@ -275,7 +278,7 @@
                     <label class="form__checkbox">
                         <input type="checkbox"/>
                         <span class="checkbox"></span>
-                        <p class="consent__text">
+                        <span class="consent__text">
                             I hereby give consent for my personal data included in my
                             application to be processed for the purposes of the recruitment
                             process under the European Parliament’s and Council of the
@@ -283,7 +286,7 @@
                             of 27 April 2016, with regard to the processing of personal data
                             and on the free movement of such data, and repealing Directive
                             95/46/EC (Data Protection Directive)
-                        </p>
+                        </span>
                     </label>
                 </div>
 
